json/tests/ui/unexpected_comma.stderr
error: no rules expected the token `,`
 --> $DIR/unexpected_comma.rs:4:17
  |
4 |     json!({ "a" , "b": true });
  |                 ^ no rules expected this token in macro call
